src/test/ui/regions/regions-implied-bounds-projection-gap-2.stderr
error: compilation successful
  --> $DIR/regions-implied-bounds-projection-gap-2.rs:23:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

